@@ -79,7 +79,7 @@ used-syringe=Used Syringe
 
 reinforced-wooden-chest=Reinforced Wooden Chest
 
-molten-iron-stick=Molten Iron Stick
+hot-iron-stick=Hot Iron Stick
 needle=Sewing Needle
 sack=Burlap Sack
 burlap-cloth=Burlap Cloth
@@ -271,7 +271,7 @@ break-used-syringe=Break Used Syringe
 clean-syringe-1=Clean Used Syringe
 clean-syringe-2=Clean Used Syringe
 
-molten-iron-stick=Heat Iron Stick
+hot-iron-stick=Heat Iron Stick
 needle=Needle
 sack=Burlap Sack
 burlap-cloth=Sew Burlap Cloth
