@@ -2,6 +2,7 @@
 Version: 1.2.0
 Date: ???
   Changes:
+    - Renamed Molten Iron Stick to Hot Iron Stick
     - Non-viable Vrauk Mass now requires burlap sacks.
     - Added Auog Non-viable mass recipes
     - Non-viable Vrauk Mass recipes reworked
